--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0"
     />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -19,8 +19,12 @@
       >
     </noscript>
     <div id="app"></div>
-    <script src="/__/firebase/7.15.0/firebase-app.js"></script>
-    <script src="/__/firebase/7.15.0/firebase-analytics.js"></script>
-    <script src="/__/firebase/init.js"></script>
+    <script defer src="/__/firebase/7.20.0/firebase-app.js"></script>
+    <script defer src="/__/firebase/7.20.0/firebase-auth.js"></script>
+    <script defer src="/__/firebase/7.20.0/firebase-database.js"></script>
+    <script defer src="/__/firebase/7.20.0/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/7.20.0/firebase-storage.js"></script>
+    <script defer src="/__/firebase/init.js"></script>
   </body>
 </html>
+
