--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0"
     />
+    <meta name="description" content="Kenrick Dietrich Front-end developer/student ICT"/>
     <link rel="icon" href="/favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
@@ -18,13 +19,13 @@
         enable it to continue.</strong
       >
     </noscript>
-    <div id="app"></div>
     <script defer src="/__/firebase/7.20.0/firebase-app.js"></script>
     <script defer src="/__/firebase/7.20.0/firebase-auth.js"></script>
     <script defer src="/__/firebase/7.20.0/firebase-database.js"></script>
     <script defer src="/__/firebase/7.20.0/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.20.0/firebase-storage.js"></script>
     <script defer src="/__/firebase/init.js"></script>
+    <div id="app"></div>
   </body>
 </html>
 
